# nrf51

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  linker.ld
CMake/: arm-none-eabi.cmake  nrf5.cmake  nrf5_app.cmake  nrf5_ble.cmake  nrf5_drv.cmake  nrf5_external.cmake  nrf5_external_libs.cmake  nrf5_helpers.cmake  nrf5_misc.cmake
include/: sdk_config.h
src/: aes.c  aes.h  aes_callback_chain.c  aes_callback_chain.h  ble.c  ble.h  ble_callback_chain.c  ble_callback_chain.h  callback.c  callback.h  clock.c  clock.h  compiler.h  main.c  main.h  pwr_mgmt.c  pwr_mgmt.h  random.c  random.h  reboot_counter.c  reboot_counter.h  settings.h  settings.h.in  timer.c  timer.h
src/rtt/: SEGGER_RTT.c  SEGGER_RTT.h  SEGGER_RTT_Conf.h  SEGGER_RTT_printf.c
